--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "google-auth-library": "^6.1.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.9",
+    "stripe": "^9.10.0",
     "uuid": "^8.3.2"
   }
 }
